--- a/kustomize/service.yaml
+++ b/kustomize/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: podinfo
   namespace: default
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: podinfo
   ports:
